[gd_scene load_steps=14 format=3 uid="uid://b4sbdx84mhnmi"]

[ext_resource type="Script" path="res://ui/story_control.gd" id="1_n2lx3"]
[ext_resource type="Theme" uid="uid://bqnq26iud8rn3" path="res://common/theme.tres" id="2_qjjgn"]
[ext_resource type="PackedScene" uid="uid://cn7vhi2yphyq2" path="res://ui/year_indicator.tscn" id="3_lycj3"]
[ext_resource type="Script" path="res://ui/animated_label.gd" id="4_v553h"]
[ext_resource type="PackedScene" uid="uid://scwnvnkr08fy" path="res://ui/character_display.tscn" id="5_rjboh"]
[ext_resource type="FontFile" uid="uid://cmmwhbpdcxfio" path="res://common/Poppins-Regular.ttf" id="6_kming"]

[sub_resource type="Animation" id="Animation_vybcr"]
resource_name = "show_advance_instructions"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AdvanceInstructions:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 3),
"transitions": PackedFloat32Array(1, 2.07053, 2.07053),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6m6et"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AdvanceInstructions:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsm27"]
_data = {
"RESET": SubResource("Animation_6m6et"),
"show_advance_instructions": SubResource("Animation_vybcr")
}

[sub_resource type="LabelSettings" id="LabelSettings_wbm1l"]
font = ExtResource("6_kming")
font_size = 64
font_color = Color(0.823529, 0.45098, 0.223529, 1)
outline_size = 8

[sub_resource type="Animation" id="Animation_4raud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EffectLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EffectLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0gyb6"]
resource_name = "show_effect"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EffectLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EffectLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EffectLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bru2w"]
_data = {
"RESET": SubResource("Animation_4raud"),
"show_effect": SubResource("Animation_0gyb6")
}

[node name="StoryControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2lx3")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qjjgn")
theme_override_constants/separation = 0

[node name="TopBoxContainer" type="Control" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="TopBox" type="VBoxContainer" parent="VBox/TopBoxContainer"]
unique_name_in_owner = true
editor_description = "This box gets replaced by the ending text at the conclusion of the game"
layout_mode = 2
offset_right = 720.0
offset_bottom = 985.0
size_flags_vertical = 3

[node name="YearIndicator" parent="VBox/TopBoxContainer/TopBox" instance=ExtResource("3_lycj3")]
unique_name_in_owner = true
layout_mode = 2

[node name="NpcPanelContainer" type="Control" parent="VBox/TopBoxContainer/TopBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(720, 538)
layout_mode = 2

[node name="AdvanceInstructions" type="Control" parent="VBox/TopBoxContainer/TopBox/NpcPanelContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="VBox/TopBoxContainer/TopBox/NpcPanelContainer/AdvanceInstructions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0.239216, 0.239216, 0.494118)

[node name="AdvanceLabel" type="Label" parent="VBox/TopBoxContainer/TopBox/NpcPanelContainer/AdvanceInstructions"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
text = "Tap anywhere to continue"
horizontal_alignment = 1

[node name="AdvanceInstructionsAnimator" type="AnimationPlayer" parent="VBox/TopBoxContainer/TopBox/NpcPanelContainer"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_bsm27")
}

[node name="StoryContainer" type="PanelContainer" parent="VBox/TopBoxContainer/TopBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StoryLabel" type="Label" parent="VBox/TopBoxContainer/TopBox/StoryContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Story text goes here."
horizontal_alignment = 1
autowrap_mode = 3
visible_characters_behavior = 1
script = ExtResource("4_v553h")

[node name="InfoContainer" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/InfoContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBox/InfoContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBox/InfoContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBox/InfoContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/InfoContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="CharacterDisplay" parent="VBox/InfoContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("5_rjboh")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonArea" type="VBoxContainer" parent="VBox/InfoContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32
alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="EffectLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 342.0
offset_bottom = 436.0
grow_horizontal = 2
text = "[EFFECT TEXT]"
label_settings = SubResource("LabelSettings_wbm1l")
horizontal_alignment = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bru2w")
}
